# cortex-code-skills

./: README.md  package.json
cortex-agent/: README.md  SKILL.md  pyproject.toml
cortex-agent/adhoc-testing-for-cortex-agent/: SKILL.md
cortex-agent/agent-observability-report/: SKILL.md
cortex-agent/agent-system-of-record/: SKILL.md
cortex-agent/best-practices/: AGENT_BEST_PRACTICES.md  SKILL.md  snowflake_intelligence_agent_instruction_best_practices.md
cortex-agent/create-cortex-agent/: ACCESS_MANAGEMENT.md  ADD_SKILLS.md  SKILL.md  TOOL_CREATION.md
cortex-agent/dataset-curation/: SKILL.md
cortex-agent/debug-single-query-for-cortex-agent/: SKILL.md
cortex-agent/delete-cortex-agent/: SKILL.md
cortex-agent/edit-cortex-agent/: SKILL.md
cortex-agent/evaluate-cortex-agent/: SKILL.md
cortex-agent/investigate-cortex-agent-evals/: SKILL.md
cortex-agent/list-cortex-agents/: SKILL.md
cortex-agent/optimize-cortex-agent/: SKILL.md
cortex-agent/optimize-cortex-search-service/: SKILL.md
cortex-agent/scripts/: agent_events_explorer.py  agent_feedback.py  create_or_alter_agent.py  create_pdf_search_service.py  evaluate_cortex_agent.py  extract_agent_config.py  fetch_events_from_event_table.py  generate_synthetic_queries.py  get_agent_config.py  google-drive-to-stage-cdc-connector.json  init_agent_workspace.py  load_eval_data_from_json.py  optimize_search_weights.py  prepare_agent_spec.py  run_evaluation.py  summarize_traces.py  test_agent.py  update_metadata.py  upload_google_shared_drive_via_openflow_to_stage.py  workspace_write.py
cortex-agent/utils/: span_utils.py
snowconvert-assessment/etl-assessment/: SKILL.md  pyproject.toml
snowflake-postgres/: README.md  SKILL.md  pyproject.toml
snowflake-postgres/connect/: SKILL.md
snowflake-postgres/diagnose/: SKILL.md
snowflake-postgres/manage/: SKILL.md
snowflake-postgres/pg-lake/: SKILL.md
snowflake-postgres/references/: documentation.md  instance-options.md  instance-states.md  thresholds.md
snowflake-postgres/scripts/: network_policy_check.py  (+4 more)
(+640 files in other folders)
