[project]
name = "snowflake-postgres"
version = "0.1.0"
description = "Snowflake Postgres skill for Cortex Code"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "snowflake-connector-python>=3.11.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
