[project]
name = "scai-assessment-analyzer"
version = "1.0.0"
description = "SSIS ETL Assessment Helper Analyzer for SnowConvert AI migrations"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/scai_assessment_analyzer"]
